<resources>
    <string name="app_name">GeeksFit</string>
    <string name="title_gim">Gim</string>
    <string name="title_pay">Payment</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="n_hand">Начинаюший:Руки </string>
    <string name="a_hand">Начинаюший:Кардио </string>
    <string name="b_hand">Начинаюший:Грудь </string>
    <string name="c_hand">Начинаюший:Ноги</string>
    <string name="e_hand">Начинаюший:Плечи и Спина </string>
    <string name="p_hand">Продолжающий:Руки </string>
    <string name="f_hand">Продолжающий:Пресс </string>
    <string name="g_hand">Продолжающий:Грудь </string>
    <string name="h_hand">Продолжающий:Ноги </string>
    <string name="i_hand">Продолжающий:Плечи и Спина </string>
    <string name="d_hand">Продвинутый:Руки </string>
    <string name="j_hand">Продвинутый:Пресс </string>
    <string name="k_hand">Продвинутый:Грудь </string>
    <string name="l_hand">Продвинутый:Ноги </string>
    <string name="m_hand">Продвинутый:Плечи и Спина </string>
    <string name="fit_first">Начинающий</string>
    <string name="fit_title_first">Уровень:начинающий</string>
    <string name="fit_title_second">Уровень:продолжающий</string>
    <string name="fit_title_third">Уровень:продвинутый</string>
    <string name="fit_second">Продолжающий</string>
    <string name="fit_third">Продвинутый</string>
    <string name="fit_forth">Тренировки</string>
    <string name="fit_fifth">Добавить в избранное</string>
    <string name="fit_sixes">Начать тренировку</string>
    <string name="fit_seventh">Description</string>
    <string name="fit_eight">Description</string>
    <string name="fit_nines">Title</string>
    <string name="fit_desc">Это уникальная, интенсивная  тренировка для похудения в домашних условиях,которая позволяет сразу сжечь пол ТЫСЯЧИ калорий! За пол часа!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name_one">PayPal</string>
    <string name="Subscriptions">Абонементы</string>
    <string name="firstMonth">1 месяц</string>
    <string name="accessMonth">Доступ к 30 программам</string>
    <string name="engageMonth">Занимайся в любое время, в любом месте</string>
    <string name="BayFirst">500сом</string>
    <string name="Bay">Купить</string>
    <string name="secondMonth">6 месяцев</string>
    <string name="accessSecondMonth">Доступ к 180 программам</string>
    <string name="engageSecondMonth">Занимайся в любое время, в любом месте</string>
    <string name="BaySecond">1500сом</string>
    <string name="thirdMonth">12 месяцев</string>
    <string name="accessThirdMonth">Доступ к 360 программам</string>
    <string name="engageThirdMonth">Занимайся в любое время, в любом месте</string>
    <string name="BayThird">5000сом</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvPay">Оплата</string>
    <string name="PayPal">     Оплатить     </string>
    <string name="enterPay">Укажите способ оплаты</string>
    <string name="enterPayO">Введите данные карты</string>
    <string name="enterPayS">Введите Имя, указанное на карте</string>
    <string name="enterPayT">Введите номер, указаный на карте</string>
    <string name="BayO"> Сумма:    500сом</string>
    <string name="BayS"> Сумма:    1500сом</string>
    <string name="BayT"> Сумма:    5000сом</string>
    <string name="BayOn">Общая сумма:   520 сом</string>
    <string name="BaySe">Общая сумма:    1520 сом</string>
    <string name="BayTh">Общая сумма:     5020 сом</string>
    <string name="BayThi">Налоги:    20сом</string>
    <string name="UserName">Ф И О</string>
    <string name="card">№ карты</string>
    <string name="CVC">CVC</string>
    <string name="exp.">exp.</string>
    <string name="pay">pay</string>
    <string name="gim">gim</string>

    <string name="data">Данные</string>
    <string name="phone_number">Номер телефона</string>
    <string name="exit">ВЫЙТИ ИЗ АККАУНТА</string>
    <string name="add_photo">Сделать снимок</string>
    <string name="bayone">BayOne</string>
</resources>